src/objects/ffr__DataViewJoinFilter__c.object
<CustomObject>
    <description>Stores the expression that serves as a filter to restrict the data included by a dataview join.</description>
    <fields>
        <fullName>ffr__ClosingBrackets__c</fullName>
        <label>Closing Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__CombineType__c</fullName>
        <label>Combine Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>And</fullName>
                </value>
                <value>
                    <fullName>Or</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__DataViewField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataView Field</label>
        <referenceTo>ffr__DataViewField__c</referenceTo>
        <relationshipLabel>Dataview Join Filters</relationshipLabel>
        <relationshipName>DataViewJoinFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__DataViewJoin__c</fullName>
        <label>DataView Join</label>
        <referenceTo>ffr__DataViewJoin__c</referenceTo>
        <relationshipLabel>Dataview Join Filters</relationshipLabel>
        <relationshipName>DataviewJoinFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__From__c</fullName>
        <label>From</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__OpeningBrackets__c</fullName>
        <label>Opening Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&lt;&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>in range</fullName>
                </value>
                <value>
                    <fullName>not in range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__Prompt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__To__c</fullName>
        <label>To</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Dataview Join Filter</label>
    <nameField>
        <displayFormat>DJF-{0000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dataview Join Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>